// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Orders selectors should select a specific settled order 1`] = `
{
  "amount": "0.01000",
  "base": "BTC",
  "createdDate": "2023-05-16",
  "createdTime": "14:57:11",
  "date": "2023-05-16",
  "executedAmount": "0.00000",
  "fee": "-",
  "filledPercentage": "",
  "filledPercentageValue": 0,
  "finishedDate": "2023-05-16",
  "finishedTime": "14:57:11",
  "id": "739b82b2-0f20-4fdd-95b2-ae73bed4b136-2023-05-16T14:57:11.930Z",
  "initialAmount": "0.01000",
  "isOpen": false,
  "isPartial": false,
  "orderId": "739b82b2-0f20-4fdd-95b2-ae73bed4b136",
  "pair": "BTC/EUR",
  "price": "25,500.85 EUR",
  "priceBase": "25,500.85",
  "quote": "EUR",
  "role": "",
  "side": "Buy",
  "status": "Canceled",
  "time": "14:57:11",
  "total": "0.01 EUR",
  "type": "RFQ_Limit",
  "user": "",
  "userCode": "",
}
`;

exports[`Orders selectors should select settled orders 1`] = `
{
  "amount": "1.0000",
  "base": "ETH",
  "createdDate": "2023-07-05",
  "createdTime": "14:29:26",
  "date": "2023-07-05",
  "executedAmount": "1.0000",
  "fee": "-",
  "filledPercentage": "",
  "filledPercentageValue": 100,
  "finishedDate": "2023-07-05",
  "finishedTime": "14:29:26",
  "id": "98e5e508-453e-44ff-b524-4a451d60cad4-2023-07-05T14:29:26.046Z",
  "initialAmount": "1.0000",
  "isOpen": false,
  "isPartial": false,
  "orderId": "98e5e508-453e-44ff-b524-4a451d60cad4",
  "pair": "ETH/EUR",
  "price": "1,750.85 EUR",
  "priceBase": "1,750.85",
  "quote": "EUR",
  "role": "",
  "side": "Sell",
  "status": "Filled",
  "time": "14:29:26",
  "total": "1,750.85 EUR",
  "type": "RFQ_Market",
  "user": "",
  "userCode": "",
}
`;

exports[`Orders selectors should select settled orders 2`] = `
{
  "amount": "0.01000",
  "base": "BTC",
  "createdDate": "2023-05-16",
  "createdTime": "14:57:11",
  "date": "2023-05-16",
  "executedAmount": "0.00000",
  "fee": "-",
  "filledPercentage": "",
  "filledPercentageValue": 0,
  "finishedDate": "2023-05-16",
  "finishedTime": "14:57:11",
  "id": "739b82b2-0f20-4fdd-95b2-ae73bed4b136-2023-05-16T14:57:11.930Z",
  "initialAmount": "0.01000",
  "isOpen": false,
  "isPartial": false,
  "orderId": "739b82b2-0f20-4fdd-95b2-ae73bed4b136",
  "pair": "BTC/EUR",
  "price": "25,500.85 EUR",
  "priceBase": "25,500.85",
  "quote": "EUR",
  "role": "",
  "side": "Buy",
  "status": "Canceled",
  "time": "14:57:11",
  "total": "0.01 EUR",
  "type": "RFQ_Limit",
  "user": "",
  "userCode": "",
}
`;

exports[`Orders selectors should select settled orders 3`] = `
{
  "amount": "0.0010",
  "base": "ETH",
  "createdDate": "2023-05-25",
  "createdTime": "14:17:29",
  "date": "2023-05-25",
  "executedAmount": "0.0000",
  "fee": "-",
  "filledPercentage": "",
  "filledPercentageValue": 0,
  "finishedDate": "2023-05-25",
  "finishedTime": "14:17:29",
  "id": "a4df41df-f438-47b9-9219-7d5e9c70eeda-2023-05-25T14:17:29.455Z",
  "initialAmount": "0.0010",
  "isOpen": false,
  "isPartial": false,
  "orderId": "a4df41df-f438-47b9-9219-7d5e9c70eeda",
  "pair": "ETH/EUR",
  "price": "1,676.38 EUR",
  "priceBase": "1,676.38",
  "quote": "EUR",
  "role": "",
  "side": "Buy",
  "status": "Rejected",
  "time": "14:17:29",
  "total": "0.00 EUR",
  "type": "RFQ_Market",
  "user": "",
  "userCode": "",
}
`;

exports[`Orders selectors should select settled orders 4`] = `
{
  "amount": "1.0000",
  "base": "ETH",
  "createdDate": "2023-07-05",
  "createdTime": "14:18:39",
  "date": "2023-07-05",
  "executedAmount": "1.0000",
  "fee": "-",
  "filledPercentage": "",
  "filledPercentageValue": 100,
  "finishedDate": "2023-07-05",
  "finishedTime": "14:18:40",
  "id": "c2aba092-e22f-41b5-8d3b-bcf65f92a668-2023-07-05T14:18:39.662Z",
  "initialAmount": "1.0000",
  "isOpen": false,
  "isPartial": false,
  "orderId": "c2aba092-e22f-41b5-8d3b-bcf65f92a668",
  "pair": "ETH/EUR",
  "price": "1,751.49 EUR",
  "priceBase": "1,751.49",
  "quote": "EUR",
  "role": "",
  "side": "Sell",
  "status": "Filled",
  "time": "14:18:40",
  "total": "1,751.49 EUR",
  "type": "RFQ_Market",
  "user": "",
  "userCode": "",
}
`;
